Bug 430018 - Some KCMs do not display title
Summary: Some KCMs do not display title
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.21.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2020-12-04 14:49 UTC by Patrick Silva
Modified: 2021-06-15 18:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screen recording (2.86 MB, video/webm)
2020-12-04 14:49 UTC, Patrick Silva
Details
kinfocenter (955.02 KB, video/webm)
2021-04-25 11:02 UTC, Patrick Silva
Details
Window Behavior KCM without title (123.94 KB, image/png)
2021-05-14 14:38 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-12-04 14:49:25 UTC
Created attachment 133873 [details]
screen recording

STEPS TO REPRODUCE
1. open System Settings
2. click on any item of the sidebar without sub-items
3. click on "Startup and Shutdown" or "Settings" or "Removable Storage"
items of the sidebar

OBSERVED RESULT
KCM title is not displayed. If I switch to another KCM and
switch back to the previous one, KCM title is displayed as expected.
Watch the attached screen recording please.

EXPECTED RESULT
The titles of all KCMs should always be displayed

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.20.80
KDE Frameworks Version: 5.77.0
Qt Version: 5.15.1
Comment 1 David Edmundson 2020-12-07 22:16:20 UTC
Bug is at:

ModuleView::updatePageIconHeader

it gets called in that KCM and that always hides the header. I have no idea what that code is trying to do
Comment 2 David Edmundson 2020-12-07 22:19:11 UTC
Seems a regression caused by: 

https://invent.kde.org/plasma/systemsettings/-/merge_requests/41
Comment 3 Patrick Silva 2021-04-25 11:02:37 UTC
Created attachment 137901 [details]
kinfocenter

As we can see in the attached screen recording, kinfocenter is also affected.
Comment 4 Marco Martin 2021-05-06 14:01:39 UTC
Git commit 8b261e7ca6242c7fe541fa3813d89e6c245a7be3 by Marco Martin.
Committed on 06/05/2021 at 14:00.
Pushed by mart into branch 'master'.

show headers for qwidget based kcms

M  +2    -1    core/ModuleView.cpp

https://invent.kde.org/plasma/systemsettings/commit/8b261e7ca6242c7fe541fa3813d89e6c245a7be3
Comment 5 Patrick Silva 2021-05-14 14:38:10 UTC
Created attachment 138417 [details]
Window Behavior KCM without title

Not completely fixed on Plasma 5.22 beta.
As we can see in the attached screenshot, Window Behavior KCM is still affected.
Comment 6 Patrick Silva 2021-06-15 18:42:14 UTC
Fixed on Plasma 5.22.1.