show headers for qwidget based kcms

BUG:430018